# Self-Playing-Tetris

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: train.cpp  visual.cpp  visual_train.cpp
src/game/: Board.cpp  Board.h  Tetrimino.cpp  Tetrimino.h
src/neat/: NEAT.h
